Modified implementation of resize detection implemented. Uglify added to the project.

--- a/demo/index.html
+++ b/demo/index.html
@@ -21,8 +21,7 @@
       <div class="h1 blocks">13</div>
       <div class="h1 blocks">14</div>
     </div>
-    <script type="text/javascript" src="bower_components/javascript-detect-element-resize/detect-element-resize.js"></script>
-    <script type="text/javascript" src="Perffect.js"></script>
+    <script type="text/javascript" src="../src/Perffect.js"></script>
     <script type="text/javascript" src="index.js"></script>
   </body>
 </html>
