Resizer is now separated project.

--- a/demo/index.html
+++ b/demo/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <div id="container">
-      <div id="first" class="h1 blocks">1</div>
+      <div id="first" class="blocks"></div>
       <div class="h2 blocks">2</div>
       <div class="h1 blocks">3</div>
       <div class="h2 blocks">4</div>
@@ -21,6 +21,7 @@
       <div class="h1 blocks">13</div>
       <div class="h1 blocks">14</div>
     </div>
+    <script type="text/javascript" src="../bower_components/Resizer/dist/Resizer.min.js"></script>
     <script type="text/javascript" src="../src/Perffect.js"></script>
     <script type="text/javascript" src="index.js"></script>
   </body>
