--- a/demo/index.html
+++ b/demo/index.html
@@ -21,7 +21,7 @@
       <div class="h1 blocks">13</div>
       <div class="h1 blocks">14</div>
     </div>
-    <script type="text/javascript" src="../bower_components/Resizer/dist/Resizer.min.js"></script>
+    <script type="text/javascript" src="../bower_components/Resizer/src/Resizer.js"></script>
     <script type="text/javascript" src="../src/Perffect.js"></script>
     <script type="text/javascript" src="index.js"></script>
   </body>
